2006-06-07  Ville Vainio  <vivainio@gmail.com>

	* iplib.py,Magic.py, ipmaker.py (magic_rehashx): 
	Confirmation prompts can be supressed by 'quiet' option. 
	_ip.options.quiet = 1 means "assume yes for all yes/no queries".

2006-06-06  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Release.py (version): Made 0.7.2 final for release.
	Repo tagged and release cut.

2006-06-05  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (magic_rehashx): Honor no_alias list earlier in 
	%rehashx, to avoid clobbering builtins in ipy_profile_sh.py
	
	* upgrade_dir.py: try import 'path' module a bit harder
	(for %upgrade)

2006-06-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/genutils.py (ask_yes_no): treat EOF as a default answer
	instead of looping 20 times.

	* IPython/ipmaker.py (make_IPython): honor -ipythondir flag
	correctly at initialization time.  Bug reported by Krishna Mohan
	Gundu <gkmohan-AT-gmail.com> on the user list.

	* IPython/Release.py (version): Mark 0.7.2 version to start
	testing for release on 06/06.

2006-05-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* scripts/irunner: thin script interface so users don't have to
	find the module and call it as an executable, since modules rarely
	live in people's PATH.

	* IPython/irunner.py (InteractiveRunner.__init__): added
	delaybeforesend attribute to control delays with newer versions of
	pexpect.  Thanks to detailed help from pexpect's author, Noah
	Spurrier <noah-AT-noah.org>.  Noted how to use the SAGE runner
	correctly (it works in NoColor mode).

	* IPython/iplib.py (handle_normal): fix nasty crash reported on
	SAGE list, from improper log() calls.

2006-05-31  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py, Magic.py (magic_upgrade): call upgrade_dir
	with args in parens to work correctly with dirs that have spaces.

2006-05-30  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Logger.py (Logger.logstart): add option to log raw input