@@ -1,8 +1,15 @@
+2006-06-07  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/iplib.py (InteractiveShell.__init__): update BSD fix, as
+	the original fix was incomplete.  Patch submitted by W. Maier.
+
 2006-06-07  Ville Vainio  <vivainio@gmail.com>
 
 	* iplib.py,Magic.py, ipmaker.py (magic_rehashx): 
 	Confirmation prompts can be supressed by 'quiet' option. 
 	_ip.options.quiet = 1 means "assume yes for all yes/no queries".
+
+2006-06-06  *** Released version 0.7.2
 
 2006-06-06  Fernando Perez  <Fernando.Perez@colorado.edu>
 
